fix (css) visible

--- a/src/components/titleSection/style.scss
+++ b/src/components/titleSection/style.scss
@@ -17,7 +17,7 @@
 .containerDown {
   display: flex;
  // outline:1px solid white;
-margin-top:10px;
+margin-top:5px;
 margin-right: 20px;
 }
 
@@ -32,6 +32,8 @@ margin-right: 20px;
 }
 .visible{
   margin-left:150px;
+  outline: 1px dashed #5b9bd5;
+  padding: 10px;
 }
 .color{
   margin-left:130px;
